使用 npx npm-check-updates -u 更新，以減少警告

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
     "env.d.ts",
     "src/**/*",
     "src/**/*.vue",
-    "scripts/**/*.ts",
+    "scripts/**/*.ts"
   ],
   "exclude": [
     "src/**/__tests__/*"
